--- a/app/templates/tasks.html
+++ b/app/templates/tasks.html
@@ -9,7 +9,7 @@
 				<form action="{{ url_for('new_task') }}" method="post">
 					<td>
 						<label>Task name:</label>
-						<input name="" type="text">
+						<input name="name" type="text">
 					</td>
 					<td>
 						<label>Due Date (mm/dd/yyyy):</label>
