--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,20 +1,53 @@
 {% extends "template.html" %}
 {% block content %}
 	<h1>Welcome to FlaskTaskr.</h1>
-	<h3>Please register to access the task list.</h3>
-		<form method="POST" action="">
+		<form class="form-signin" role="form" method="POST" action="">
+			<div class="lead">Please register to access the task list.</div>
 			{{ form.csrf_token }}
 			<p>
-				{{ form.name.label }}: {{ form.name }}
-				&nbsp;&nbsp;
-				{{ form.email.label }}: {{ form.email }}
+				{{ form.name(placeholder="name") }}
+				<span class="error">
+					{% if form.name.errors %}
+						{% for error in form.name.errors %}
+							{{ error }}
+						{% endfor %}
+					{% endif %}
+				</span>
 			</p>
 			<p>
-				{{ form.password.label }}: {{ form.password }}
-				&nbsp;&nbsp;
-				{{ form.confirm.label }} : {{ form.confirm }}
+				{{ form.email(placeholder="email address") }}
+				<span class="error">
+					{% if form.email.errors %}
+						{% for error in form.email.errors %}
+							{{ error }}
+						{% endfor %}
+					{% endif %}
+				</span>
 			</p>
-			<p><input type="submit" value="Register"></p>
+			<p>
+				{{ form.password(placeholder="password") }}
+				<span class="error">
+					{% if form.password.errors %}
+						{% for error in form.password.errors %}
+							{{ error }}
+						{% endfor %}
+					{% endif %}
+				</span>
+			</p>
+			<p>
+				<span class="error">
+					{% if form.confirm.errors %}
+						{% for error in form.confirm.errors %}
+							{{ error }}
+						{% endfor %}
+					{% endif %}
+				</span>
+			</p>
+			<button class="btn btn-sm btn-success" type="submit">
+				Register
+			</button>
+			<br />
+			<br />
+			<p><em>Already Registered?</em> Click <a href="/">here</a> to login.</p>
 		</form>
-		<p><em>Already registered?</em> Click <a href="/">here</a> to login.</p>
 {% endblock %}
