--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -2,7 +2,7 @@
 {% block content %}
 	<h1>Welcome to FlaskTaskr.</h1>
 		<form class="form-signin" role="form" method="POST" action="">
-			<div class="lead">Please register to access the task list.</div>
+			<div class="lead">Please register to access a task list.</div>
 			{{ form.csrf_token }}
 			<p>
 				{{ form.name(placeholder="name") }}
@@ -35,6 +35,7 @@
 				</span>
 			</p>
 			<p>
+				{{ form.confirm(placeholder="confirm") }}
 				<span class="error">
 					{% if form.confirm.errors %}
 						{% for error in form.confirm.errors %}
