--- a/app/templates/template.html
+++ b/app/templates/template.html
@@ -8,7 +8,7 @@
 		<div class="page">
 			{% for message in get_flashed_messages() %}
 				<div class="flash">
-					{{ messages }}	
+					{{ message }}	
 				</div>
 			{% endfor %}
 			{% if error %}
